--- a/slides/02-revisions-slides.html
+++ b/slides/02-revisions-slides.html
@@ -145,7 +145,7 @@ Steven Golovkine
 </div>
 </div>
 
-  <p class="date">30 mai 2025</p>
+  <p class="date">02 juin 2025</p>
   <figure>
     <center>
       <img src="../include/logo-ul.png" alt="logo" width="40%">
