--- a/td/02-revision-td.html
+++ b/td/02-revision-td.html
@@ -105,6 +105,7 @@ window.Quarto = {
 </script>
 
 <meta property="og:title" content="TD: Révision – STT-2200: Analyse de données">
+<meta property="og:description" content="">
 <meta property="og:site_name" content="STT-2200: Analyse de données">
 </head>
 
@@ -617,8 +618,15 @@ window.Quarto = {
 <div id="quarto-sidebar-glass" class="quarto-sidebar-collapse-item" data-bs-toggle="collapse" data-bs-target=".quarto-sidebar-collapse-item"></div>
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
-        
-    <div class="quarto-alternate-formats"><h2>Autres formats</h2><ul><li><a href="02-revision-td.pdf"><i class="bi bi-file-pdf"></i>PDF</a></li></ul></div></div>
+        <nav id="TOC" role="doc-toc" class="toc-active">
+    <h2 id="toc-title">Sur cette page</h2>
+   
+  <ul>
+  <li><a href="#un-problème-de-vélo" id="toc-un-problème-de-vélo" class="nav-link active" data-scroll-target="#un-problème-de-vélo">Un problème de vélo</a></li>
+  <li><a href="#paradoxe-des-deux-enfants" id="toc-paradoxe-des-deux-enfants" class="nav-link" data-scroll-target="#paradoxe-des-deux-enfants">Paradoxe des deux enfants</a></li>
+  </ul>
+<div class="toc-actions"><ul><li><a href="https://github.com/StevenGolovkine/UL-STT2200/issues/new" class="toc-action"><i class="bi bi-github"></i>Faire part d'un problème</a></li><li><a href="https://github.com/StevenGolovkine/UL-STT2200/blob/main/td/02-revision-td.qmd" class="toc-action"><i class="bi empty"></i>Voir la source</a></li></ul></div><div class="quarto-alternate-formats"><h2>Autres formats</h2><ul><li><a href="02-revision-td.pdf"><i class="bi bi-file-pdf"></i>PDF</a></li></ul></div></nav>
+    </div>
 <!-- main -->
 <main class="content" id="quarto-document-content">
 
@@ -642,8 +650,40 @@ window.Quarto = {
 </header>
 
 
+<section id="un-problème-de-vélo" class="level2">
+<h2 class="anchored" data-anchor-id="un-problème-de-vélo">Un problème de vélo</h2>
+<p>Dans ce problème, on cherche à modéliser la répartition des vélos en libre service dans les différentes stations de l’université Laval. Le campus comporte cinq stations pouvant acceuillir un total de <span class="math inline">\(136\)</span> vélos (<a href="https://www.sc.ulaval.ca/mobilite-durable/se-deplacer-a-velo#:~:text=àVélo,l'avenue%20de%20la%20Médecine">lien</a>):</p>
+<ul>
+<li><p>Abitibi-Prince (ABP)</p></li>
+<li><p>Alphone-Desjardins (ADJ)</p></li>
+<li><p>Charles-De Koninck (DKN)</p></li>
+<li><p>Ferdinand-Vandry (VND)</p></li>
+<li><p>PEPS</p></li>
+</ul>
+<p>Supposons que tous les vélos sont retournés à une des cinq stations à la fin de la journée, i.e.&nbsp;pour chaque jour, il y a un moment dans la journée (par exemple, à minuit), où tous les vélos sont à une certaine station. Nous pouvons donc nous intéresser à ces stations à ce moment de la journée pour chaque jour. Nous cherchons à modéliser les movements des vélos de minuit pour un jour donné jusqu’à minuit du jour suivant. Nous trouvons que :</p>
+<ul>
+<li><p>pour les vélos empruntés à ABP, <span class="math inline">\(50\%\)</span> y retourne, <span class="math inline">\(10\%\)</span> vont à ADJ, <span class="math inline">\(20\%\)</span> vont à DKN et <span class="math inline">\(20\%\)</span> vont à VND.</p></li>
+<li><p>pour les vélos empruntés à ADJ, <span class="math inline">\(30\%\)</span> y retourne, <span class="math inline">\(10\%\)</span> vont à ABP, <span class="math inline">\(10\%\)</span> vont à DKN, <span class="math inline">\(10\%\)</span> vont à VND et <span class="math inline">\(40\%\)</span> vont au PEPS.</p></li>
+<li><p>pour les vélos empruntés à DKN, <span class="math inline">\(80\%\)</span> y retourne, <span class="math inline">\(5\%\)</span> vont à ADJ, et <span class="math inline">\(15\%\)</span> vont au PEPS.</p></li>
+<li><p>pour les vélos empruntés à VND, <span class="math inline">\(50\%\)</span> y retourne, <span class="math inline">\(20\%\)</span> vont à ABP, <span class="math inline">\(5\%\)</span> vont à ADJ, <span class="math inline">\(15\%\)</span> vont à DKN et <span class="math inline">\(10\%\)</span> vont au PEPS.</p></li>
+<li><p>pour les vélos empruntés au PEPS, <span class="math inline">\(0\%\)</span> y retourne, <span class="math inline">\(25\%\)</span> vont à ABP, <span class="math inline">\(25\%\)</span> vont à ADJ, <span class="math inline">\(25\%\)</span> vont à DKN et <span class="math inline">\(25\%\)</span> vont à VND.</p></li>
+</ul>
+<ol type="1">
+<li><p>Faire un graphe de la situation.</p></li>
+<li><p>Écrire la matrice <span class="math inline">\(T\)</span> tel que chaque entrée <span class="math inline">\(t_{ij}\)</span> corresponde à la probabilité de passer de la station <span class="math inline">\(i\)</span> à la station <span class="math inline">\(j\)</span>, <span class="math inline">\(i, j \in \{ \text{ABP}, \text{ADJ}, \text{DKN}, \text{VND}, \text{PEPS} \}\)</span>. On appelle cette matrice, la matrice de transition.</p></li>
+<li><p>Quelle est la probabilité qu’un vélo soit à la station PEPS au jour 2 sachant qu’il était à la station ADJ au début ?</p></li>
+<li><p>Supposons qu’il y ait <span class="math inline">\(20\)</span> vélos à ABP, <span class="math inline">\(35\)</span> vélos à ADJ, <span class="math inline">\(26\)</span> vélos à DKN, <span class="math inline">\(45\)</span> à VND et <span class="math inline">\(10\)</span> au PEPS. En utilisant une diagonalisation de la matrice <span class="math inline">\(T\)</span>, donner la répartition des vélos après <span class="math inline">\(10\)</span> jours.</p></li>
+</ol>
+</section>
+<section id="paradoxe-des-deux-enfants" class="level2">
+<h2 class="anchored" data-anchor-id="paradoxe-des-deux-enfants">Paradoxe des deux enfants</h2>
+<p>On cherche à modéliser les probabilités d’avoir des enfants d’un certain sexe. Dans toutes les questions, les enfants sont soit de sexe masculin, soit de sexe féminin, de façon équiprobable.</p>
+<ol type="1">
+<li></li>
+</ol>
 
 
+</section>
 
 </main> <!-- /main -->
 <script>
@@ -1277,7 +1317,7 @@ window.onload = function() {
     </div>   
     <div class="nav-footer-center">
 <p>2025 | <strong>Steven Golovkine</strong> | <a class="link-footer" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0</a></p>
-<div class="toc-actions"><ul><li><a href="https://github.com/StevenGolovkine/UL-STT2200/issues/new" class="toc-action"><i class="bi bi-github"></i>Faire part d'un problème</a></li><li><a href="https://github.com/StevenGolovkine/UL-STT2200/blob/main/td/02-revision-td.qmd" class="toc-action"><i class="bi empty"></i>Voir la source</a></li></ul></div></div>
+<div class="toc-actions d-sm-block d-md-none"><ul><li><a href="https://github.com/StevenGolovkine/UL-STT2200/issues/new" class="toc-action"><i class="bi bi-github"></i>Faire part d'un problème</a></li><li><a href="https://github.com/StevenGolovkine/UL-STT2200/blob/main/td/02-revision-td.qmd" class="toc-action"><i class="bi empty"></i>Voir la source</a></li></ul></div></div>
     <div class="nav-footer-right">
       &nbsp;
     </div>
