--- a/td/02-revision-td.html
+++ b/td/02-revision-td.html
@@ -679,7 +679,10 @@ window.Quarto = {
 <h2 class="anchored" data-anchor-id="paradoxe-des-deux-enfants">Paradoxe des deux enfants</h2>
 <p>On cherche à modéliser les probabilités d’avoir des enfants d’un certain sexe. Dans toutes les questions, les enfants sont soit de sexe masculin, soit de sexe féminin, de façon équiprobable.</p>
 <ol type="1">
-<li></li>
+<li><p>M. Gagnon a deux enfants. L’enfant aîné est une fille. Quelle est la probabilité que son deuxième enfant soit aussi une fille ?</p></li>
+<li><p>Mme Tremblay a deux enfants. On lui pose la question suivante : “Avez-vous au moins un garçon ?” et elle répond : “Oui”. Quelle est la probabilité que les deux enfants soient des garçons ?</p></li>
+<li><p>Est-ce que la probabilité de Mme Tremblay d’avoir deux garçons change si on lui pose la question suivante : “Indiquez moi le sexe de l’un de vos enfants.” et qu’elle répond : “J’ai (au moins) un garçon.” ?</p></li>
+<li><p>On croise M. Gagnon dans la rue en train de se balader avec sa fille. On lui demande quel jour de la semaine elle est née. Elle nous répond: “Vendredi”. Quelle est la probabilité que son deuxième enfant soit aussi une fille ?</p></li>
 </ol>
 
 
