deploy: fb0211756a9ddb6a0fcfd9b4c6345e4ab965da8b

--- a/td/02-revision-td.html
+++ b/td/02-revision-td.html
@@ -622,9 +622,9 @@ window.Quarto = {
     <h2 id="toc-title">Sur cette page</h2>
    
   <ul>
-  <li><a href="#un-problème-de-vélo" id="toc-un-problème-de-vélo" class="nav-link active" data-scroll-target="#un-problème-de-vélo">Un problème de vélo</a></li>
-  <li><a href="#paradoxe-des-deux-enfants" id="toc-paradoxe-des-deux-enfants" class="nav-link" data-scroll-target="#paradoxe-des-deux-enfants">Paradoxe des deux enfants</a></li>
-  <li><a href="#la-loi-dohm" id="toc-la-loi-dohm" class="nav-link" data-scroll-target="#la-loi-dohm">La loi d’Ohm</a></li>
+  <li><a href="#exercice-1-un-problème-de-vélo" id="toc-exercice-1-un-problème-de-vélo" class="nav-link active" data-scroll-target="#exercice-1-un-problème-de-vélo">Exercice 1: Un problème de vélo</a></li>
+  <li><a href="#exercice-2-paradoxe-des-deux-enfants" id="toc-exercice-2-paradoxe-des-deux-enfants" class="nav-link" data-scroll-target="#exercice-2-paradoxe-des-deux-enfants">Exercice 2: Paradoxe des deux enfants</a></li>
+  <li><a href="#exercice-3-la-loi-dohm" id="toc-exercice-3-la-loi-dohm" class="nav-link" data-scroll-target="#exercice-3-la-loi-dohm">Exercice 3: La loi d’Ohm</a></li>
   </ul>
 <div class="toc-actions"><ul><li><a href="https://github.com/StevenGolovkine/UL-STT2200/issues/new" class="toc-action"><i class="bi bi-github"></i>Faire part d'un problème</a></li><li><a href="https://github.com/StevenGolovkine/UL-STT2200/blob/main/td/02-revision-td.qmd" class="toc-action"><i class="bi empty"></i>Voir la source</a></li></ul></div><div class="quarto-alternate-formats"><h2>Autres formats</h2><ul><li><a href="02-revision-td.pdf"><i class="bi bi-file-pdf"></i>PDF</a></li></ul></div></nav>
     </div>
@@ -651,8 +651,8 @@ window.Quarto = {
 </header>
 
 
-<section id="un-problème-de-vélo" class="level2">
-<h2 class="anchored" data-anchor-id="un-problème-de-vélo">Un problème de vélo</h2>
+<section id="exercice-1-un-problème-de-vélo" class="level2">
+<h2 class="anchored" data-anchor-id="exercice-1-un-problème-de-vélo">Exercice 1: Un problème de vélo</h2>
 <p>Dans ce problème, on cherche à modéliser la répartition des vélos en libre service dans les différentes stations de l’université Laval. Le campus comporte cinq stations pouvant acceuillir un total de <span class="math inline">\(136\)</span> vélos (<a href="https://www.sc.ulaval.ca/mobilite-durable/se-deplacer-a-velo#:~:text=àVélo,l'avenue%20de%20la%20Médecine">lien</a>): Abitibi-Prince (ABP), Alphone-Desjardins (ADJ), Charles-De Koninck (DKN), Ferdinand-Vandry (VND) et PEPS.</p>
 <p>Supposons que tous les vélos sont retournés à une des cinq stations à la fin de la journée, i.e.&nbsp;pour chaque jour, il y a un moment dans la journée (par exemple, à minuit), où tous les vélos sont à une certaine station. Nous pouvons donc nous intéresser à ces stations à ce moment de la journée pour chaque jour. Nous cherchons à modéliser les movements des vélos de minuit pour un jour donné jusqu’à minuit du jour suivant. Nous trouvons que :</p>
 <ul>
@@ -669,8 +669,8 @@ window.Quarto = {
 <li><p>Supposons qu’il y ait <span class="math inline">\(20\)</span> vélos à ABP, <span class="math inline">\(35\)</span> vélos à ADJ, <span class="math inline">\(26\)</span> vélos à DKN, <span class="math inline">\(45\)</span> à VND et <span class="math inline">\(10\)</span> au PEPS. En utilisant une diagonalisation de la matrice <span class="math inline">\(T\)</span>, donner la répartition des vélos après <span class="math inline">\(10\)</span> jours.</p></li>
 </ol>
 </section>
-<section id="paradoxe-des-deux-enfants" class="level2">
-<h2 class="anchored" data-anchor-id="paradoxe-des-deux-enfants">Paradoxe des deux enfants</h2>
+<section id="exercice-2-paradoxe-des-deux-enfants" class="level2">
+<h2 class="anchored" data-anchor-id="exercice-2-paradoxe-des-deux-enfants">Exercice 2: Paradoxe des deux enfants</h2>
 <p>On cherche à modéliser les probabilités d’avoir des enfants d’un certain sexe. Dans toutes les questions, les enfants sont soit de sexe masculin, soit de sexe féminin, de façon équiprobable.</p>
 <ol type="1">
 <li><p>M. Gagnon a deux enfants. L’enfant aîné est une fille. Quelle est la probabilité que son deuxième enfant soit aussi une fille ?</p></li>
@@ -679,8 +679,8 @@ window.Quarto = {
 <li><p>On croise M. Gagnon dans la rue en train de se balader avec sa fille. On lui demande quel jour de la semaine elle est née. Elle nous répond: “Vendredi”. Quelle est la probabilité que son deuxième enfant soit aussi une fille ?</p></li>
 </ol>
 </section>
-<section id="la-loi-dohm" class="level2">
-<h2 class="anchored" data-anchor-id="la-loi-dohm">La loi d’Ohm</h2>
+<section id="exercice-3-la-loi-dohm" class="level2">
+<h2 class="anchored" data-anchor-id="exercice-3-la-loi-dohm">Exercice 3: La loi d’Ohm</h2>
 <p>On cherche à calculer la valeur d’un résistance. Pour cela, on lui envoie un courant électrique (intensité en ampères, A) et on mesure la différence de potentiel entre les bornes de la résistance (tension en volt, V). On trouve les valeurs suivantes :</p>
 <table class="caption-top table">
 <thead>
