--- a/tp/02-revision-tp.html
+++ b/tp/02-revision-tp.html
@@ -624,6 +624,7 @@ window.Quarto = {
   <ul>
   <li><a href="#exercice-1-estimer-pi" id="toc-exercice-1-estimer-pi" class="nav-link active" data-scroll-target="#exercice-1-estimer-pi">Exercice 1: Estimer <span class="math inline">\(\pi\)</span></a></li>
   <li><a href="#exercice-2-estimation-dintégrale" id="toc-exercice-2-estimation-dintégrale" class="nav-link" data-scroll-target="#exercice-2-estimation-dintégrale">Exercice 2: Estimation d’intégrale</a></li>
+  <li><a href="#exercice-3-la-loi-des-gaz-parfaits" id="toc-exercice-3-la-loi-des-gaz-parfaits" class="nav-link" data-scroll-target="#exercice-3-la-loi-des-gaz-parfaits">Exercice 3: La loi des gaz parfaits</a></li>
   </ul>
 <div class="toc-actions"><ul><li><a href="https://github.com/StevenGolovkine/UL-STT2200/issues/new" class="toc-action"><i class="bi bi-github"></i>Faire part d'un problème</a></li><li><a href="https://github.com/StevenGolovkine/UL-STT2200/blob/main/tp/02-revision-tp.qmd" class="toc-action"><i class="bi empty"></i>Voir la source</a></li></ul></div><div class="quarto-alternate-formats"><h2>Autres formats</h2><ul><li><a href="02-revision-tp.pdf"><i class="bi bi-file-pdf"></i>PDF</a></li></ul></div></nav>
     </div>
@@ -671,6 +672,9 @@ window.Quarto = {
 <li><p>L’intégrale <span class="math inline">\(I\)</span> peut être vu comme l’espérance d’un variable aléatoire. <span class="math inline">\(I = \mathbb{E}[f(U)]\)</span>, où <span class="math inline">\(U \sim \mathcal{U}(-1, 1)\)</span>. On peut estimer <span class="math inline">\(I\)</span> en utilisant <span class="math inline">\(\widetilde{I}(n) = \frac{1}{n} \sum_{i = 1}^{n} f(u_i)\)</span>, où les <span class="math inline">\(u_i\)</span> sont des réalisations de la variable aléatoire <span class="math inline">\(U\)</span>. Estimer <span class="math inline">\(I\)</span> en utilisant cette méthode.</p></li>
 <li><p>Comparer la qualité de ces deux estimateurs de <span class="math inline">\(I\)</span> en fonction de <span class="math inline">\(n\)</span>.</p></li>
 </ol>
+</section>
+<section id="exercice-3-la-loi-des-gaz-parfaits" class="level2">
+<h2 class="anchored" data-anchor-id="exercice-3-la-loi-des-gaz-parfaits">Exercice 3: La loi des gaz parfaits</h2>
 
 
 </section>
